; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_cgroup.c_unit_has_unified_memory_config.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_cgroup.c_unit_has_unified_memory_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64, i64, i64 }

@CGROUP_LIMIT_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_9__*)* @unit_has_unified_memory_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unit_has_unified_memory_config(%struct.TYPE_9__* %0) #0 {
  %2 = alloca %struct.TYPE_9__*, align 8
  %3 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %2, align 8
  %4 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %5 = call i32 @assert(%struct.TYPE_9__* %4)
  %6 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %7 = call %struct.TYPE_9__* @unit_get_cgroup_context(%struct.TYPE_9__* %6)
  store %struct.TYPE_9__* %7, %struct.TYPE_9__** %3, align 8
  %8 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %9 = call i32 @assert(%struct.TYPE_9__* %8)
  %10 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %11 = call i64 @unit_get_ancestor_memory_min(%struct.TYPE_9__* %10)
  %12 = icmp sgt i64 %11, 0
  br i1 %12, label %35, label %13

13:                                               ; preds = %1
  %14 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %15 = call i64 @unit_get_ancestor_memory_low(%struct.TYPE_9__* %14)
  %16 = icmp sgt i64 %15, 0
  br i1 %16, label %35, label %17

17:                                               ; preds = %13
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @CGROUP_LIMIT_MAX, align 8
  %22 = icmp ne i64 %20, %21
  br i1 %22, label %35, label %23

23:                                               ; preds = %17
  %24 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @CGROUP_LIMIT_MAX, align 8
  %28 = icmp ne i64 %26, %27
  br i1 %28, label %35, label %29

29:                                               ; preds = %23
  %30 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %31 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %30, i32 0, i32 2
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* @CGROUP_LIMIT_MAX, align 8
  %34 = icmp ne i64 %32, %33
  br label %35

35:                                               ; preds = %29, %23, %17, %13, %1
  %36 = phi i1 [ true, %23 ], [ true, %17 ], [ true, %13 ], [ true, %1 ], [ %34, %29 ]
  %37 = zext i1 %36 to i32
  ret i32 %37
}

declare dso_local i32 @assert(%struct.TYPE_9__*) #1

declare dso_local %struct.TYPE_9__* @unit_get_cgroup_context(%struct.TYPE_9__*) #1

declare dso_local i64 @unit_get_ancestor_memory_min(%struct.TYPE_9__*) #1

declare dso_local i64 @unit_get_ancestor_memory_low(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
